<resources>
    <string name="app_name">PhoneStop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_address">Full Address</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="zip_code">Zip Code</string>
    <string name="email">Email</string>
</resources>